SER06-J. Make defensive copies of private mutable components during deserialization